[package]
name = "rudb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10.3", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"
